--- a/src/theme/Testimonial.module.css
+++ b/src/theme/Testimonial.module.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 85vw;
 }
 .sectionTitle {
   margin: 30px 0 0 0;
@@ -18,6 +19,7 @@
   justify-content: center;
   flex-wrap: wrap;
   margin-top: 3rem;
+  max-width: 900px;
 }
 
 .card {
@@ -28,7 +30,7 @@
   color: inherit;
   text-decoration: none;
   border-radius: 10px;
-  width: 300px;
+  width: 250px;
 }
 
 .card:hover,
