--- a/src/theme/Header.module.css
+++ b/src/theme/Header.module.css
@@ -1,6 +1,7 @@
 .header {
     display: flex;
     color: #242423;
+    font-weight: 600;
     background-color: #F2F2F2;
     padding: 20px;
     align-items: center;
@@ -18,34 +19,78 @@
 }
 
 .star:hover {
-    border: 3px solid grey;
+    box-shadow: 5px 5px 10px grey;
 }
 
 .jobtrail {
     font-size: 1.5rem;
 }
 
-.navItems {
-    list-style-type: none;
+
+/* .navItems:first-child {
     color: red;
-    text-decoration: none !important;
+} */
+
+.navLi {
+    list-style-type: none;
+    display: inline;
+    padding: 10px;
 }
 
-.navLink,
-.navLink:visited {
-    display: inline;
-    text-decoration: none !important;
-    padding: 10px;
-    color: red;
+.navA {
+    text-decoration: none;
+    color: #242423;
+    font-weight: 600;
 }
+
+.navA:hover {
+    text-decoration: underline;
+    text-decoration-color: #2F93DA;
+}
+
+
+/* .navA:first-of-type {
+    color: red;
+} */
 
 .getStartedButton {
     background: #D55D48;
     color: #F2F2F2;
     border-radius: 30px;
-    padding: 10px;
-    margin-right: 30px;
+    padding: 15px;
+    margin-right: 20px;
     outline: none;
     border: none;
     font-size: 1rem;
+    box-shadow: 5px 5px 10px grey;
+}
+
+.getStartedButton:hover {
+    text-decoration: underline;
+    text-decoration-color: #2F93DA;
+}
+
+
+/* ===============# HERO #=============== */
+
+.hero {
+    color: #242423;
+    font-weight: 600;
+    background-color: #F2F2F2;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* justify-content: center; */
+    padding-top: 50px;
+}
+
+.heading {
+    color: #8E8358;
+    font-size: 2.5rem;
+}
+
+.pHero {
+    font-size: 1.2rem;
+    padding: 20px 0 50px;
 }
