--- a/src/theme/Header.module.css
+++ b/src/theme/Header.module.css
@@ -22,18 +22,14 @@
     color: #2F93DA;
 }
 
-.star:hover {
+
+/* .star:hover {
     box-shadow: 5px 5px 10px grey;
-}
+} */
 
 .jobtrail {
     font-size: 1.5rem;
 }
-
-
-/* .navItems:first-child {
-    color: red;
-} */
 
 .navLi {
     list-style-type: none;
@@ -49,14 +45,18 @@
 
 .navA:hover {
     color: #2F93DA;
-    text-decoration: underline;
-    text-decoration-color: #2F93DA;
+    /* text-decoration: underline;
+    text-decoration-color: #2F93DA; */
 }
 
+.navAActive {
+    color: #2F93DA;
+    text-decoration: none;
+}
 
-/* .navA:first-of-type {
-    color: red;
-} */
+.navA:active {
+    color: #2F93DA;
+}
 
 .getStartedButton {
     background: #D55D48;
@@ -64,15 +64,19 @@
     border-radius: 30px;
     padding: 15px;
     margin-right: 20px;
-    outline: none;
     border: none;
     font-size: 1rem;
     box-shadow: 5px 5px 10px grey;
 }
 
 .getStartedButton:hover {
-    text-decoration: underline;
-    text-decoration-color: #2F93DA;
+    border: 1px solid #2F93DA;
+}
+
+.responsiveContainer {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .MenuButton {
@@ -115,7 +119,7 @@
     color: #242423;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     position: absolute;
-    /* margin-top: 300px; */
+    box-shadow: 12px 0px 2px 1000px rgba(0, 0, 1, 0.3)
 }
 
 .X {
@@ -125,7 +129,7 @@
 }
 
 .GrClose {
-    margin: 5px;
+    margin: 25px;
 }
 
 .menuItems {
@@ -134,10 +138,10 @@
 
 .menuLi {
     list-style-type: none;
-    padding: 15px;
+    padding: 20px;
     padding-left: 0;
-    border-bottom: 1px solid grey;
-    width: 200px;
+    border-bottom: 1px solid lightgrey;
+    width: 250px;
 }
 
 .menuA {
@@ -152,7 +156,7 @@
 .SocialMedia {
     display: flex;
     justify-content: center;
-    margin-top: 250px;
+    margin-top: 220px;
 }
 
 .SocialMediaIcons {
